--- a/unidade04/un04_ex01.html
+++ b/unidade04/un04_ex01.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Curso de CSS3 - Essencial</title>
-        <meta charset="utf-8">
+        <meta charset="utf-8" lang="pr-br">
     </head>
     
     <body>
