--- a/unidade05/exercicio_03_textsombra.html
+++ b/unidade05/exercicio_03_textsombra.html
@@ -5,10 +5,17 @@
 
         <style>
             h1 {
+                font-size: 80px;
+                background-color: black;
+                margin: 10px;
+                padding: 50px;
                 font-family:Arial, Helvetica, sans-serif;
                 font-weight:lighter;
                 color:#39C;
-                text-shadow: 2px 2px 2px #000;
+                text-shadow: -3px -3px white, 1px 1px; #000;
+                
+                
+
             }
         </style>
     </head>
