--- a/unidade05/exercicio_04_gradiente_standard.html
+++ b/unidade05/exercicio_04_gradiente_standard.html
@@ -9,7 +9,7 @@
                 top:50px;left:50px;
                 width:200px;
                 height:200px;
-                background:linear-gradient( to right, blue, red); 
+                background:linear-gradient( to right,red, rgb(0, 255, 89), rgb(68, 0, 255),yellow,black); 
                 /*background:linear-gradient( 0deg, blue, red ); */
             }
         </style>
