--- a/unidade06/exercicio_02.html
+++ b/unidade06/exercicio_02.html
@@ -45,15 +45,15 @@
             }
 
             h1 {
-
+                font-size:4em; /*200%*/
             }
 
             h2 {
-
+                font-size: 3em;
             }
 
             p {
-
+            font-size: 1.5em;
             }
 
         </style>
