--- a/unidade06/exercicio_07.html
+++ b/unidade06/exercicio_07.html
@@ -61,6 +61,23 @@
                 line-height:1.5;
                 margin-bottom:20px; 
             }
+            section.textoApresentacao img{
+                float: left;
+                margin-right: 0.5em;
+                margin-bottom: 1.5em;
+            }
+            section.textoMedio{
+                clear: both;
+               
+            }
+            section.textoMedio p:first-of-type:first-letter{
+                font-size: 4em;
+                line-height: 0.8;
+                margin: 0 5px 0 0;
+                float: left;
+                font-family: Georgia, 'Times New Roman', Times, serif;
+
+            }
         </style>
 
 
@@ -85,6 +102,7 @@
                     <p>We want to share the elegant private dining room at the Cafe Townsend flagship restaurant with you! Set in a unique, historic building in San Francisco, our private dining room is available to host your corporate events, parties, weddings, and more. </p>
                     <p>Our special events manager, sommelier, and executive chef will work with you to make sure your special event is truly special. We offer multiple menu options, or we can customize a menu for you.  In keeping with the award-winning cuisine and exceptional service you expect, we provide place cards, personally printed menus, and candles. We are also happy to help you arrange other services.</p>
                     <p>Our unique setting, highly personalized service, and memorable dining are the perfect combination for your special event! Please contact us for more information! </p>
+                    
                 </section>
 
                 <section class="textoMedio">
