--- a/unidade07/exercicio_04_fixed.html
+++ b/unidade07/exercicio_04_fixed.html
@@ -18,6 +18,7 @@
             }
 
             main {
+                height: 3000px;
                 width:660px;
                 background-color:rgb(255,255,255);
                 font-family:Arial, Helvetica, sans-serif;
@@ -39,6 +40,10 @@
 
             .janela1 {
                 background-color:rgb(153,204,51);
+                position: fixed;
+                top: 10px;
+                right: 10px;
+
             }
 
             .janela2 {
