--- a/unidade09/exercicio1_layout_flexivel.html
+++ b/unidade09/exercicio1_layout_flexivel.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8" lang="pt-br">
         <title>Curso de CSS</title>
         
         <style>
@@ -19,7 +19,7 @@
             }
 
             main {
-                width:960px;
+                width:85%-;
                 margin:10px auto;
                 box-shadow:0 0 10px #999999;
                 background-color:rgb(255,255,255);
