--- a/unidade07/exercicio_04_fixed.html
+++ b/unidade07/exercicio_04_fixed.html
@@ -41,8 +41,10 @@
             .janela1 {
                 background-color:rgb(153,204,51);
                 position: fixed;
-                top: 10px;
-                right: 10px;
+                width: 100%;
+                height: 100px;
+                top: 0px;
+                left: 0px;
 
             }
 
