--- a/unidade08/aplicar_grid.html
+++ b/unidade08/aplicar_grid.html
@@ -1,58 +1,91 @@
 <!doctype html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Curso de CSS</title>
-        
-        <style>
-            html, body {
-                margin:0;
-                padding:0;
-            }
 
-            body {
-                background:rgb(229,229,229);
-            }
+<head>
+    <meta charset="utf-8">
+    <title>Curso de CSS</title>
 
-            article, aside, section, header, footer, nav {
-                display:block;
-            }
+    <style>
+        html,
+        body {
+            margin: 0;
+            padding: 0;
+        }
 
-            main {
+        body {
+            background: rgb(229, 229, 229);
+        }
 
-            }
+        article,
+        aside,
+        section,
+        header,
+        footer,
+        nav {
+            display: block;
+        }
 
-            header {
+        main {
+            width: 1400px;
+            margin: 0 auto;
+            box-shadow: 0 0 10px #333;
+            background-color: white;
+        }
 
-            }
+        header {
+            width: 1400px;
+            height: 110px;
+            background-color: #ff7f00;
+            
+        }
 
-            nav {
+        nav {
+            width: 1400px;
+            height: 40px;
+            background-color: #B28500;
+            margin-top: 1px;
+        }
 
-            }
+        .conteudo {
+            width: 980px;
+            height:555px ;
+            float: left;
+            background-color: #ffd24d;
+            margin-top: 1px;
+            margin-left: 4px;
+            margin-bottom: 2px;
+        }
 
-            .conteudo {
+        .apoio {
+            width: 410px;
+            height: 554px;
+            float: right;
+            background-color:#dddddd;
+            margin-top: 1px;
+            margin-bottom: 2px;
+        }
 
-            }
+        footer {
+            width: 1400px;
+            height: 40px;
+            background-color: #999999;
+            margin-bottom: 1px;
+            clear: both;
 
-            .apoio {
+        }
+    </style>
+</head>
 
-            }
+<body>
+    <main>
+        <header></header>
+        <nav></nav>
 
-            footer {
+        <section class="conteudo"></section>
+        <section class="apoio"></section>
 
-            }
-        </style>
-    </head>
+        <footer>Endereco, telefone e outras informacoes</footer>
+    </main>
+</body>
 
-    <body>
-        <main>
-            <header></header>
-            <nav></nav>
-
-            <section class="conteudo"></section>
-            <section class="apoio"></section>
-
-            <footer>Endereco, telefone e outras informacoes</footer>
-        </main>
-    </body>
 </html>
