--- a/unidade09/exercicio1_layout_flexivel.html
+++ b/unidade09/exercicio1_layout_flexivel.html
@@ -19,16 +19,17 @@
             }
 
             main {
-                width:85%-;
+                width:1250px;
                 margin:10px auto;
                 box-shadow:0 0 10px #999999;
                 background-color:rgb(255,255,255);
                 font-size:13px;
-                min-width: 960px;
+                min-width:100px;
+                
             }
 
             header {
-                width:960px;
+                width:1250px;
                 height:110px;
                 background-color:rgb(255,127,0);
                 background-color:rgb(12,4,1);
@@ -37,18 +38,18 @@
             }
 
             nav {
-                width:960px;
+                width:1250px;
                 height:40px;
                 background-color:rgb(12,4,1);
             }
 
             nav a {
-                float:left;
+                 float:left;
                 font-family: Georgia, "Times New Roman", Times, serif;
                 font-style: italic;
                 color: #FC9;
                 text-decoration: none;
-                padding:5px 2%;
+                padding:5px;
                 margin-top: 5px;
                 font-size: 100%;
                 text-align: center;
@@ -56,11 +57,11 @@
 
             .conteudo {
                 float:left;
-                width:640px;
+                width:930px;
                 height:350px;
                 background-color:rgb(255,210,77);
-                margin-top:10px;
-                margin-bottom:20px;
+                margin-top:5px;
+                margin-bottom:5px;
             }
 
             .apoio {
@@ -68,13 +69,13 @@
                 width:310px;
                 height:350px;
                 background-color:rgb(221,221,221);
-                margin-top:10px;
+                margin-top:5px;
             }
 
             footer {
                 clear:both;
-                width:960px;
-                height:60px;
+                width:1250px;
+                height:40px;
                 background-color:rgb(153,153,153);
             }
         </style>
