--- a/unidade10/exercicio02_lista.html
+++ b/unidade10/exercicio02_lista.html
@@ -1,12 +1,16 @@
 <!doctype html>
 <html>
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8" lang="pt-br">
         <title>Curso de CSS</title>
         <style>
             body {
                 font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
                 font-size:14px;
+            }
+            
+            li:nth-child(even){
+                color: chartreuse;
             }
         </style>
     </head>
