--- a/unidade10/exercicio01_lista.html
+++ b/unidade10/exercicio01_lista.html
@@ -8,6 +8,16 @@
                 font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
                 font-size:14px;
             }
+             ol {
+                list-style-type: lower-latin;
+
+            }
+             ul, ol{
+                margin: 0;padding: 0;
+            }
+            li{
+                list-style-type: none;                
+            }
         </style>
 
         <body>
@@ -20,13 +30,13 @@
                 <li>Cabo Verde</li>
             </ul>
 
-            <ol>
+           <ol>
                 <li>Brasil</li>
                 <li>Portugal</li>
                 <li>Angola</li>
                 <li>Moçambique</li>
                 <li>Cabo Verde</li>
-            </ol>    
+            </ol>     
 
         </body>
 </html>
