--- a/unidade10/exercicio04_menu_horizontal.html
+++ b/unidade10/exercicio04_menu_horizontal.html
@@ -8,28 +8,29 @@
                 font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
                 font-size:13px;
             }
-
             nav ul {
                 margin:0;
                 padding:0;
+                text-align: center;              
             }
-
             nav ul li {
                 list-style-type:none;
-
+                display: inline;
             }
-
             nav ul li a {
-
+                padding: 10px 30px;
+                text-decoration: none;
+                background-color: blue;
+                color: white;
+                display: inline-block;
+                margin-right: -3px;
+                width: 100px;
             }
-
             nav ul li a:hover {
-
+                background-color: cornflowerblue;
             }
         </style>
-
     </head>
-
     <body>
         <nav>
             <ul>
