--- a/unidade10/exercicio04_menu_horizontal.html
+++ b/unidade10/exercicio04_menu_horizontal.html
@@ -12,10 +12,11 @@
                 margin:0;
                 padding:0;
                 text-align: center;              
+                background-color: aqua;
             }
             nav ul li {
                 list-style-type:none;
-                display: inline;
+                display:inline ;
             }
             nav ul li a {
                 padding: 10px 30px;
